[project]
name = "tibems-python"
version = "0.1.0"
description = "Python wrapper for the TIBCO Enterprise Message Service (EMS) C API"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
